Virtual Threads example 2